# mcpify

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/adapters/: exec.rs  http.rs  mod.rs  sql.rs
src/cli/: commands.rs  mod.rs
src/config/: diff.rs  loader.rs  mod.rs  model.rs  validate.rs
src/errors/: mod.rs
src/mcp/: mod.rs  server.rs
src/observability/: mod.rs
src/runtime/: app_state.rs  mod.rs  registry.rs  reload.rs
src/supervisor/: child.rs  health.rs  manager.rs  mod.rs  service.rs
src/template/: render.rs
