[package]
name = "mcpify"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"], default-features = false }
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
notify = "7"
notify-debouncer-mini = "0.5"

[dev-dependencies]
tempfile = "3"
